fixed banner shift

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -39,7 +39,7 @@ header.banner {
 
 /* Style pour le menu */
 #accountMenu {
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
 
@@ -205,8 +205,7 @@ header.banner {
 */
 /* Style pour les boutons d'authentification */
 .auth-buttons {
-  position: absolute;
-  right: 6%;
+  position: relative;
 }
 
 .auth-buttons .btn {
@@ -291,5 +290,9 @@ footer {
   padding: 1rem 0;
   position: fixed;
   bottom: 0;
+  width: 100%;
+}
+
+footer.banner section {
   width: 100%;
 }
